aula1-pratico.pdf

--- a/Analise de Algoritmos e Estruturas de Dados/aula1-pratico.ipynb
+++ b/Analise de Algoritmos e Estruturas de Dados/aula1-pratico.ipynb
@@ -5,6 +5,8 @@
    "metadata": {},
    "source": [
     "# Class 01 - Practical exercise complexity analysis\n",
+    "GITHUB: https://github.com/pantro/doutoradoCS/blob/main/Analise%20de%20Algoritmos%20e%20Estruturas%20de%20Dados/aula1-pratico.ipynb\n",
+    "\n",
     "### 1) Propose a recursive algorithm to determine whether a number is prime or not. Propose an iterative algorithm for the same purpose. \n",
     "* Execute both functions to find the largest prime number in a random vector of 100,000 elements (use the same vector in both codes). \n",
     "* Check which of the two executed faster (use a time() function). \n",
