changing file names

--- a/Analise de Algoritmos e Estruturas de Dados/gianfrancojoel_condoriluna_aula1Teorico.ipynb
+++ b/Analise de Algoritmos e Estruturas de Dados/gianfrancojoel_condoriluna_aula1Teorico.ipynb
@@ -5,6 +5,9 @@
    "metadata": {},
    "source": [
     "# CLASS 1: Theoretical exercise on complexity analysis\n",
+    "\n",
+    "GITHUB: https://github.com/pantro/doutoradoCS/blob/main/Analise%20de%20Algoritmos%20e%20Estruturas%20de%20Dados/aula1-teorico.ipynb\n",
+    "\n",
     "### 1) Solve the following questions, use the asymptotic analysis definition and plot comparative graphs of the functions:\n",
     "#### a) Show that the function $5n^2 + n$ is $O(n^2)$. To do this, show that there exist two positive constants $c$ and $m$ such that $g(n) ≤ cf(n)$, for all $n ≥ m$."
    ]
