--- a/Analise de Algoritmos e Estruturas de Dados/aula2/gianfrancojoel_condoriluna_aula2Teorico.ipynb
+++ b/Analise de Algoritmos e Estruturas de Dados/aula2/gianfrancojoel_condoriluna_aula2Teorico.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "ALUNO: GIAN FRANCO JOEL CONDORI LUNA\n",
+    "\n",
     "# AULA2: Exercício teórico análise de algoritmos recursivos"
    ]
   },
