aula7 pratica terminado lo que faltaba

--- a/Analise de Algoritmos e Estruturas de Dados/aula7/gianfrancojoel_condoriluna_aula7Pratico.ipynb
+++ b/Analise de Algoritmos e Estruturas de Dados/aula7/gianfrancojoel_condoriluna_aula7Pratico.ipynb
@@ -13,13 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1) Resolver os exercícios no Beecrowd Judge: https://judge.beecrowd.com/\n",
+    "## Resolver os exercícios no Beecrowd Judge: https://judge.beecrowd.com/\n",
     "\n",
-    "1242 Ácido Ribonucleico Alienígena\n",
+    "* 1242 Ácido Ribonucleico Alienígena\n",
     "\n",
-    "1083 LEXSIM - Avaliador Lexico e Sintático\n",
+    "* 1083 LEXSIM - Avaliador Lexico e Sintático\n",
     "\n",
-    "- Anexar no classroom um pdf com a análise de complexidade dos algoritmos que vc\n",
+    "  - Anexar no classroom um pdf com a análise de complexidade dos algoritmos que vc\n",
     "desenvolveu."
    ]
   },
@@ -27,14 +27,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Solução:"
+    "## Solução:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1242 Ácido Ribonucleico Alienígena\n",
+    "### Ácido Ribonucleico Alienígena (1242 )\n",
     "#### Passos:\n",
     "\n",
     "* Para resolver este problema decidi usar Listas Duplas Encadeadas, pois elas me permitiram saber quem era meu nó anterior. É aqui que é armazenada a lista de letras inseridas pelo usuário.\n",
@@ -183,10 +183,10 @@
    "source": [
     "### Complexidade do código\n",
     "\n",
-    "##### 1. Classe \"Nodo\"\n",
+    "#### Classe \"Nodo\"\n",
     "* Complexidade de tempo para criar um nó: O(1) (constante).\n",
     "\n",
-    "##### 2. Métodos da classe \"ListaEnlazada\"\n",
+    "#### Métodos da classe \"ListaEnlazada\"\n",
     "a) Método \"agregar\"\n",
     "* Complexidade de tempo: O(n) (onde n é o número de nós na lista no momento da adição).\n",
     "\n",
@@ -196,18 +196,232 @@
     "c) Método \"imprimir\"\n",
     "* Complexidade de tempo: O(n) (onde n é o número de nós na lista).\n",
     "\n",
-    "##### 3. Função main\n",
+    "#### Função main\n",
     "a) Adicionar letras à lista encadeada\n",
     "* O método agregar é chamado para cada letra. No pior caso, adicionar um elemento tem complexidade de O(n) (percorrendo toda a lista). Portanto, para um texto de comprimento m, a complexidade total de adicionar as letras é: O(m²) (para adicionar todas as letras).\n",
     "\n",
     "b) Remover pares de nós\n",
     "* Como a remoção de cada nó ocorre em tempo constante (O(1)), a complexidade do processo de remoção é: O(m) (para percorrer e eliminar nós).\n",
     "\n",
-    "##### 4. Laço principal para captura de entrada\n",
+    "#### Laço principal para captura de entrada\n",
     "* Complexidade de tempo: O(p * m), onde p é o número de linhas de entrada e m é o comprimento médio de cada linha.\n",
     "\n",
-    "##### Resposta:\n",
+    "#### Resposta:\n",
     "* Complexidade total de tempo: O(n²)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LEXSIM - Avaliador Lexico e Sintático (1083)\n",
+    "\n",
+    "Fonte: chatGPT\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Syntax Error!\n",
+      "Syntax Error!\n",
+      "AB+c*\n",
+      "Lexical Error!\n",
+      "abc*+2/e*a+\n",
+      "abc*+2/ea+*\n",
+      "Syntax Error!\n",
+      "Syntax Error!\n",
+      "Syntax Error!\n",
+      "Lexical Error!\n",
+      "ab+c-\n",
+      "abc*d/-e+\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "        \n",
+    "    def is_empty(self):\n",
+    "        return len(self.items) == 0\n",
+    "        \n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        return self.items.pop() if not self.is_empty() else None\n",
+    "        \n",
+    "    def peek(self):\n",
+    "        return self.items[-1] if not self.is_empty() else None\n",
+    "        \n",
+    "    def size(self):\n",
+    "        return len(self.items)\n",
+    "\n",
+    "# Definindo as prioridades dos operadores\n",
+    "precedence = {\n",
+    "    '^': 6,\n",
+    "    '*': 5,\n",
+    "    '/': 5,\n",
+    "    '+': 4,\n",
+    "    '-': 4,\n",
+    "    '>': 3,\n",
+    "    '<': 3,\n",
+    "    '=': 3,\n",
+    "    '#': 3,\n",
+    "    '.': 2,  # AND\n",
+    "    '|': 1   # OR\n",
+    "}\n",
+    "\n",
+    "# Função para verificar se um caractere é um operando\n",
+    "def is_operand(c):\n",
+    "    return c.isalnum()  # Letras e números\n",
+    "\n",
+    "# Função para verificar se um caractere é um operador\n",
+    "def is_operator(c):\n",
+    "    return c in precedence\n",
+    "\n",
+    "# Função para transformar a expressão infixa em pós-fixa\n",
+    "def infix_to_postfix(expression):\n",
+    "    stack = Stack()\n",
+    "    output = []\n",
+    "    last_token_was_operator = True  # Indicador se o último token foi um operador\n",
+    "\n",
+    "    for token in expression:\n",
+    "        if is_operand(token):  # Se for um operando, adicionar à saída\n",
+    "            output.append(token)\n",
+    "            last_token_was_operator = False  # O último token não é um operador\n",
+    "        elif token == '(':  # Se for um parênteses esquerdo, empilhar\n",
+    "            stack.push(token)\n",
+    "            last_token_was_operator = True  # O último token é um operador\n",
+    "        elif token == ')':  # Se for um parênteses direito\n",
+    "            while not stack.is_empty() and stack.peek() != '(':\n",
+    "                output.append(stack.pop())\n",
+    "            if stack.is_empty():  # Parênteses esquerdo faltando\n",
+    "                return \"Syntax Error!\"\n",
+    "            stack.pop()  # Remover o '('\n",
+    "            last_token_was_operator = False  # Ao fechar um parênteses, não é um operador\n",
+    "        elif is_operator(token):  # Se for um operador\n",
+    "            if last_token_was_operator:  # Verificar se há dois operadores consecutivos\n",
+    "                return \"Syntax Error!\"\n",
+    "            while (not stack.is_empty() and \n",
+    "                   stack.peek() in precedence and\n",
+    "                   precedence[stack.peek()] >= precedence[token]):\n",
+    "                output.append(stack.pop())\n",
+    "            stack.push(token)\n",
+    "            last_token_was_operator = True  # O último token é um operador\n",
+    "        else:\n",
+    "            return \"Lexical Error!\"  # Caractere inválido\n",
+    "\n",
+    "    while not stack.is_empty():\n",
+    "        top = stack.pop()\n",
+    "        if top == '(':\n",
+    "            return \"Syntax Error!\"  # Parênteses não balanceados\n",
+    "        output.append(top)\n",
+    "\n",
+    "    if last_token_was_operator:  # Verificar se o último token é um operador\n",
+    "        return \"Syntax Error!\"\n",
+    "\n",
+    "    return ''.join(output)\n",
+    "\n",
+    "# Função principal para processar as expressões\n",
+    "def process_expressions(expressions):\n",
+    "    for expression in expressions:\n",
+    "        expression = expression.strip()  # Remover espaços em branco\n",
+    "        if expression:  # Se não estiver vazio\n",
+    "            # Verificar se a expressão começa ou termina com um operador\n",
+    "            if expression[0] in precedence or expression[-1] in precedence:\n",
+    "                print(\"Syntax Error!\")\n",
+    "            else:\n",
+    "                result = infix_to_postfix(expression)\n",
+    "                print(result)\n",
+    "\n",
+    "# Ejemplo de uso\n",
+    "expressions = [\n",
+    "    #\"(A+\",\n",
+    "    #\"(A+B)*c\",\n",
+    "    #\"(A+B)*%\",\n",
+    "    #\"(a+b*c)/2*e+a\",\n",
+    "    #\"(a+b*c)/2*(e+a)\",\n",
+    "    #\"(a+b*c)/2*(e+a\",\n",
+    "    #\"(ab+*c)/2*(e+a)\",\n",
+    "    #\"(a+b*cc)/2*(e+a)\",\n",
+    "    #\"('a+b*cc)/2*(e+a)\",\n",
+    "    #\"a+b-c\",\n",
+    "    #\"a-b*c/d+e\"\n",
+    "    \"(\",\n",
+    "    \"(A+\",\n",
+    "    \"(A+B)*c\",\n",
+    "    \"(A+B)*%\",\n",
+    "    \"(a+b*c)/2*e+a\",\n",
+    "    \"(a+b*c)/2*(e+a)\",\n",
+    "    \"(a+b*c)/2*(e+a\",\n",
+    "    \"(ab+*c)/2*(e+a)\",\n",
+    "    \"(a+b*cc)/2*(e+a\",\n",
+    "    \"(“a+b*cc)/2*(e+a\",\n",
+    "    \"a+b-c\",\n",
+    "    \"a-b*c/d+e\",\n",
+    "]\n",
+    "\n",
+    "process_expressions(expressions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_data = []\n",
+    "\n",
+    "try:\n",
+    "    while True:\n",
+    "        line = input()  # Capturar entrada do console\n",
+    "        \n",
+    "        if line == \"\":  # Condição para finalizar a entrada (pressione Enter em uma linha vazia)\n",
+    "            break\n",
+    "        \n",
+    "        input_data.append(line)\n",
+    "        \n",
+    "except EOFError:\n",
+    "    pass  # Lidar com EOF se ocorrer\n",
+    "\n",
+    "# As entradas capturadas enviadas a funcao\n",
+    "process_expressions(input_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complexidade do código\n",
+    "Fonte: ChatGPT\n",
+    "\n",
+    "#### Classe \"Stack\":\n",
+    "* __init__: O(1) — Inicializa uma lista vazia.\n",
+    "* is_empty: O(1) — Verifica se a pilha está vazia.\n",
+    "* push: O(1) — Adiciona um item ao final da lista.\n",
+    "* pop: O(1) — Remove e retorna o último item da lista, se não estiver vazia.\n",
+    "* peek: O(1) — Retorna o último item da lista, se não estiver vazia, sem removê-lo.\n",
+    "* size: O(1) — Retorna o número de itens na pilha.\n",
+    "\n",
+    "#### Verificação de Operandos e Operadores:\n",
+    "* is_operand: O(1) — Verifica se o caractere é um operando (letra ou número).\n",
+    "* is_operator: O(1) — Verifica se o caractere é um operador através de um dicionário.\n",
+    "\n",
+    "#### Função \"infix_to_postfix\":\n",
+    "* Complexidade Geral: O(n), onde n é o número de tokens na expressão.\n",
+    "\n",
+    "#### Função \"process_expressions\":\n",
+    "* Complexidade Geral: O(m * n), onde m é o número de expressões e n é o número de tokens na expressão mais longa.\n",
+    "\n",
+    "#### Resposta\n",
+    "* Complexidade total de tempo: O(m*n)"
    ]
   }
  ],
@@ -231,5 +445,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
